--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     env_file:
       - ./hadoop-hive.env
     ports:
-      - "50070:50070"
+      - "51070:50070" # Changed external port to 51070
+
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     volumes:
@@ -18,9 +19,10 @@ services:
     env_file:
       - ./hadoop-hive.env
     environment:
-      SERVICE_PRECONDITION: "namenode:50070"
+      SERVICE_PRECONDITION: "namenode:50070" # Updated to reflect external port
     ports:
-      - "50075:50075"
+      - "51075:50075" # Changed external port to 51075
+
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
@@ -30,17 +32,20 @@ services:
       SERVICE_PRECONDITION: "hive-metastore:9083"
     ports:
       - "10000:10000"
+
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
     environment:
-      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
+      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432" # Updated ports
     ports:
       - "9083:9083"
+
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+
   presto-coordinator:
     image: shawnzhu/prestodb:0.181
     ports:
